--- a/src/app/modules/costs/components/cost-group/cost-group.component.html
+++ b/src/app/modules/costs/components/cost-group/cost-group.component.html
@@ -1,5 +1,5 @@
-<div class="border p-3">
-  <div class="row p-2 bg-blue">
+<div class="container border">
+  <div class="row p-3 bg-blue">
     <div class="col">
       <h6>{{cost.name}}</h6>
     </div>
