--- a/src/app/modules/costs/components/cost-item/cost-item.component.html
+++ b/src/app/modules/costs/components/cost-item/cost-item.component.html
@@ -1,6 +1,6 @@
 <div class="row p-2">
-  <div class="col"> <small>{{costItem.name}}</small> </div>
-  <div class="col">{{costItem.costItemAlias.accountingCode}}</div>
+  <div class="col"><small>{{costItem.name}}</small> </div>
+  <div class="col"><small>{{costItem.costItemAlias.accountingCode}}</small></div>
 
   <div class="col text-right">
     <mcr-cost-price-text [amount]="quoted.amount" [toCurrency]="toCurrency" [baseCurrency]="baseCurrency">
