--- a/src/app/modules/costs/components/cost-group/cost-group.component.html
+++ b/src/app/modules/costs/components/cost-group/cost-group.component.html
@@ -16,7 +16,7 @@
   </div>
   <ng-container *ngFor="let costItem of cost.costItems">
     <mcr-cost-item [baseCurrency]="baseCurrency" [toCurrency]="toCurrency" [costItem]="costItem"
-      (onChanged)="changePriceAndRecalculate($event)"></mcr-cost-item>
+      (changed)="changePriceAndRecalculate($event)"></mcr-cost-item>
   </ng-container>
   <div class="row my-2">
     <div class="col py-2">
