--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,1 +1,2 @@
-<a href="" class="fs-3 p-3"><i class="bi bi-github"></i></a>
+<a href="https://www.linkedin.com/in/ynslmz/" class="fs-3 mx-1"><i class="bi bi-linkedin"></i></a>
+<a href="https://github.com/ynslmz" class="fs-3 mx-1"><i class="bi bi-github"></i></a>
