--- a/src/app/modules/costs/components/cost-item/cost-item.component.html
+++ b/src/app/modules/costs/components/cost-item/cost-item.component.html
@@ -19,5 +19,5 @@
   </div>
 </div>
 <div class="row py-3 bg-alternative" #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
-  <mcr-cost-comments [comments]="costItem.comments"></mcr-cost-comments>
+  <mcr-cost-comments class="col" [comments]="costItem.comments"></mcr-cost-comments>
 </div>
