--- a/src/app/modules/costs/components/cost-comments/cost-comments.component.html
+++ b/src/app/modules/costs/components/cost-comments/cost-comments.component.html
@@ -18,7 +18,7 @@
   </div>
 
 </div>
-<div class="w-100 px-3">
+<div class="w-100 px-3" [ngClass]="{'d-none':!comments?.length}">
   <hr />
 </div>
 <div class="col">
